tests/ui/pub/pub-ident-fn-or-struct.rs
pub S (foo) bar
//~^ ERROR missing `fn` or `struct` for function or struct definition

fn main() {}

// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
//
// ferrocene-annotations: fls_9ucqbbd0s2yo
// Struct Types
